Breaking: Multi Step Nav removed `$multi-step-indicator-bg` and fix bug where the divider is hidden under a postion relative parent

--- a/packages/clay/src/scss/lexicon-base/_multi-step-nav.scss
+++ b/packages/clay/src/scss/lexicon-base/_multi-step-nav.scss
@@ -120,13 +120,11 @@
 .multi-step-divider {
 	background-color: $multi-step-divider-bg;
 	height: $multi-step-divider-height;
-	margin-top: -$multi-step-divider-margin-top;
 	position: relative;
-	z-index: -1;
+	top: $multi-step-divider-margin-top;
 }
 
 .multi-step-indicator {
-	background-color: $multi-step-indicator-bg;
 	position: relative;
 	width: $multi-step-indicator-width;
 
