--- a/packages/clay/src/scss/lexicon-base/variables/_multi-step-nav.scss
+++ b/packages/clay/src/scss/lexicon-base/variables/_multi-step-nav.scss
@@ -13,7 +13,6 @@ $multi-step-divider-height: 0.25rem !default;
 $multi-step-divider-margin-top: ($multi-step-divider-height / 2) + ($multi-step-icon-size / 2) !default;
 $multi-step-divider-spacer-x: 0 !default;
 
-$multi-step-indicator-bg: $body-bg !default;
 $multi-step-indicator-width: $multi-step-icon-size + ($multi-step-divider-spacer-x * 2) !default;
 
 $multi-step-indicator-label-font-size: $font-size-base !default;
